--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -95,9 +95,11 @@ padding: 130px 150px;
 text-align: center;
 }
 .section-title{
-margin-bottom: 30px;
+margin-bottom: 50px;
 font-weight: 700;
 font-size: 35px;
+text-align: center;
+padding: 20px;
 }
 .section-description{
 color: #757575;
@@ -117,3 +119,32 @@ margin-bottom: 30px;
     font-size: 16px;
     color: #474747;
 }
+/* what i do styles */
+.what-i-do{
+    margin-top: 130px;
+}
+.skill-container{
+    display: flex;
+    gap: 24px; ;
+   
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    
+}
+.skill-description{
+    color: #757575;
+}
+.skill{
+    background: #ffffff;
+    box-shadow: 0px 60px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+section{
+    margin: 130px;;
+}
+/* resume styles */
