--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -148,3 +148,54 @@ section{
     margin: 130px;;
 }
 /* resume styles */
+.resume-content{
+    display: flex;
+    gap: 24px;
+
+}
+.resume .title{
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    align-items: center;
+}
+.resume .sub-title{
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px ;
+}
+.resume .description{
+color: #757575;
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    align-items: center;
+}
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
+}
+/* contact styles */
+.contact ,.section-title{
+    text-align: left;
+}
+.contact{
+    display: flex;
+    gap: 100px;
+    background-color: #fff8f3;
+    padding: 130px 200px;
+}
+.contact input,  textarea{
+    margin-bottom: 24px;
+    border:     0;
+    width: 100%;
+    padding:18px 20px;
+}
+input{
+    height: 30px ;
+}
+.contact a{
+    text-decoration: none;
+}
